# rag-personal-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
agent/: __init__.py
agent/agents/: coder_agent.py  planner_agent.py  reviewer_agent.py
agent/core/: agent.py  memory.py  state.py  tools.py
agent/memory/: base.py  session_memory.py  vector_memory.py
agent/prompts/: system.md
agent/prompts/examples/: example_qa.md
agent/skills/: calc_skill.py  search_skill.py  text_chunker.py  weather_skill.py
agent/tools/: api_tool.py  db_tool.py  web_search.py
configs/: config.yaml  models.yaml
tests/: test_agent.py  test_skills.py
